# MetricLogger

./: .gitignore  CMakeLists.txt  README.md
src/: avg_metric.cpp  avg_metric.h  cnt_metric.cpp  cnt_metric.h  cpu_utilization_metric.cpp  cpu_utilization_metric.h  imetric.h  main.cpp  metric_manager.cpp  metric_manager.h  test1.cpp  test2.cpp
